<resources>
    <string name="app_name">My App portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="main_hello">My Nanodegree Apps!</string>
    <string name="spotify_button">Spotify Streamer</string>
    <string name="future_behavior_message">This will launch %1$s app!</string>
    <string name="capstone_button">Capstone: my own App</string>
    <string name="xyz_button">XYZ Reader</string>
    <string name="buildit_button">Build it bigger</string>
    <string name="library_button">Library App</string>
    <string name="scores_button">Scores App</string>
</resources>
